--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
   <script src="js/index.js"></script>
   <script src="js/itunes.js"></script>
   <script>
-    getTopApps();
+    getApps();
   </script>
 </body>
 
