--- a/index.html
+++ b/index.html
@@ -71,6 +71,28 @@
       bottom: 0;
       width: 100vw;
     }
+
+    .pace {
+      -webkit-pointer-events: none;
+      pointer-events: none;
+      -webkit-user-select: none;
+      -moz-user-select: none;
+      user-select: none;
+    }
+
+    .pace-inactive {
+      display: none;
+    }
+
+    .pace .pace-progress {
+      background-color: rgba(0, 0, 0, 0.19999999999999996);
+      position: fixed;
+      z-index: -1;
+      top: 0;
+      right: 100%;
+      bottom: 0;
+      width: 100%;
+    }
   </style>
 
 </head>
@@ -93,6 +115,7 @@
 
   </div> -->
 
+  <script src="/pace.min.js"></script>
   <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js'></script>
   <script src='//cdn.jsdelivr.net/jquery.marquee/1.3.1/jquery.marquee.min.js'></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
