--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
     }
 
     .pace .pace-progress {
-      background-color: rgba(0, 0, 0, 0.19999999999999996);
+      background-color: RGB(248, 168, 57);
       position: fixed;
       z-index: -1;
       top: 0;
@@ -105,21 +105,9 @@
   </div>
 
 
-  <!-- <div id="controls">
-    <div class="container">
-      <div class="row">
-        <div></div>
-        <div class="col credits justify-content-between">Made by Pat Murray</div>
-      </div>
-    </div>
-
-  </div> -->
-
   <script src="/pace.min.js"></script>
   <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js'></script>
   <script src='//cdn.jsdelivr.net/jquery.marquee/1.3.1/jquery.marquee.min.js'></script>
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
-    crossorigin="anonymous"></script>
   <script src="js/index.js"></script>
   <script src="js/itunes.js"></script>
   <script>
