--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 
     #instructions {
       width: 100%;
-      background-color: RGB(248, 168, 57);
+      background-color: RGBA(248, 168, 57, 0.6);
       padding: 1em;
       position: fixed;
       text-align: center;
