--- a/edit.html
+++ b/edit.html
@@ -138,6 +138,9 @@
         <p><strong>Current Apps:</strong></p>
         <ul id="current"></ul>
         <button onclick="clearList();">Clear List</button>
+
+        <p><strong>Top Apps:</strong></p>
+        <ul id="topapps"></ul>
     </div>
 
 
@@ -184,6 +187,70 @@
         }
 
         getApps();
+        getTopApps();
+
+
+
+        var freeApps;
+        var paidApps;
+
+        function getTopApps() {
+            getFreeApps();
+            getPaidApps();
+
+
+        }
+
+        function getPaidApps() {
+            var settings = {
+                "async": true,
+                "url": "/paid-apps",
+                "method": "GET",
+            }
+            $.ajax(settings).done(function (response) {
+                console.log(response);
+
+                paidApps = response.feed.results;
+
+                setAppStore();
+            });
+        }
+
+        function getFreeApps() {
+            var settings = {
+                "async": true,
+                "url": "/free-apps",
+                "method": "GET",
+            }
+            $.ajax(settings).done(function (response) {
+                console.log(response);
+
+                freeApps = response.feed.results;
+
+                setAppStore();
+            });
+        }
+
+        function setAppStore() {
+            console.log("freeApps", freeApps);
+            console.log("paidApps", paidApps);
+            if (freeApps && paidApps) {
+                console.log("combine");
+                var arrayCombined = $.map(freeApps, function (v, i) {
+                    return [v, paidApps[i]];
+                });
+                console.log(arrayCombined);
+                layOutScreen(arrayCombined);
+            }
+        }
+
+        function setTopApps(array) {
+            localapps.forEach(app => {
+                var name = app.trackName;
+                var obj = '<li>' + name + '<button onclick="getAppWithId(' + app.id + ');">+</button></li>'
+                $("#topapps").append(obj)
+            });
+        }
 
     </script>
 </body>
