fixed typo in edit screen

--- a/edit.html
+++ b/edit.html
@@ -240,7 +240,7 @@
                     return [v, paidApps[i]];
                 });
                 console.log(arrayCombined);
-                layOutScreen(arrayCombined);
+                setTopApps(arrayCombined);
             }
         }
 
