--- a/edit.html
+++ b/edit.html
@@ -249,7 +249,7 @@
 
         function setTopApps(array) {
             array.forEach(app => {
-                var name = app.trackName;
+                var name = app.name;
                 var obj = '<li>' + name + '<button onclick="getAppWithId(' + app.id + ');">+</button></li>'
                 $("#topapps").append(obj)
             });
