--- a/edit.html
+++ b/edit.html
@@ -250,7 +250,7 @@
         function setTopApps(array) {
             array.forEach(app => {
                 var name = app.name;
-                var obj = '<li>' + name + '<button onclick="getAppWithId(' + app.id + ');">+</button></li>'
+                var obj = '<li><button onclick="getAppWithId(' + app.id + ');">+</button>&nbsp;&nbsp;&nbsp;&nbsp;' + name + '</li>'
                 $("#topapps").append(obj)
             });
         }
