--- a/index.html
+++ b/index.html
@@ -65,11 +65,27 @@
     }
 
     #instructions {
-      width: 100%;
-      background-color: RGBA(248, 168, 57, 0.6);
+      width: 90%;
+      max-width: 600px;
+
+      background-color: RGBA(0, 0, 0, 0.6);
       padding: 1em;
-      position: fixed;
       text-align: center;
+      color: white;
+      -webkit-backdrop-filter: blur(10px);
+      backdrop-filter: blur(10px);
+      border-radius: 15px;
+    }
+
+    .modalContainer {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      position: fixed;
+      top: 0;
+      left: 0;
+      right: 0;
+      bottom: 0;
     }
 
     .pace {
@@ -124,7 +140,7 @@
       display: none;
     }
 
-    button {
+    button, .button {
       -moz-box-shadow: inset 0px 1px 0px 0px #ffffff;
       -webkit-box-shadow: inset 0px 1px 0px 0px #ffffff;
       box-shadow: inset 0px 1px 0px 0px #ffffff;
@@ -150,7 +166,7 @@
       text-shadow: 0px 1px 0px #ffffff;
     }
 
-    button:hover {
+    button:hover, .button:hover  {
       background: -webkit-gradient(linear, left top, left bottom, color-stop(0.05, #f6f6f6), color-stop(1, #ffffff));
       background: -moz-linear-gradient(top, #f6f6f6 5%, #ffffff 100%);
       background: -webkit-linear-gradient(top, #f6f6f6 5%, #ffffff 100%);
@@ -159,9 +175,10 @@
       background: linear-gradient(to bottom, #f6f6f6 5%, #ffffff 100%);
       filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#f6f6f6', endColorstr='#ffffff', GradientType=0);
       background-color: #f6f6f6;
+      text-decoration: none;
     }
 
-    button:active {
+    button:active, .button:active {
       position: relative;
       top: 1px;
     }
@@ -171,10 +188,15 @@
 
 <body>
 
-  <div id="instructions">
-    <p>Double click anywhere to enter fullscreen. Edit the app list <a href="/edit">here</a>.</p>
-    <button onclick="closeBanner();">Close</button>
+  <div class="modalContainer" id="modalContainer">
+    <div id="instructions">
+      <h1>Wall of Apps</h1>
+      <a class="button" href="/edit">Edit Wall</a>
+      <button onclick="toggleFullScreen();">Present Wall</button>
+    </div>
   </div>
+
+
 
   <div id="container">
     <div class="grid" id="grid">
@@ -189,10 +211,6 @@
   <script src="js/itunes.js"></script>
   <script>
     getApps();
-
-    function closeBanner() {
-      $("#instructions").hide();
-    }
   </script>
 </body>
 
