--- a/edit.html
+++ b/edit.html
@@ -113,6 +113,19 @@
       text-decoration: none;
       text-shadow: 0px 1px 0px #ffffff;
     }
+        
+        button.small, .button.small {
+            display: block;
+            padding: 0;
+            margin-top: -38px;
+            margin-left: 10px;
+            position: relative;
+            margin-bottom: 1.3em;
+            border-color: black;
+            width: 10px;
+            height: 20px;
+            border-radius: 50%;
+        }
 
     button:hover, .button:hover  {
       background: -webkit-gradient(linear, left top, left bottom, color-stop(0.05, #f6f6f6), color-stop(1, #ffffff));
