--- a/edit.html
+++ b/edit.html
@@ -151,6 +151,7 @@
             min-width: 80px;
             vertical-align: top;
             margin-right: 10px;
+            margin-bottom: 1em;
         }
 
         .icon {
