--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
   <meta charset="UTF-8">
   <title>Wall of Apps</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
-    crossorigin="anonymous">
+  <!-- <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
+    crossorigin="anonymous"> -->
 
 
   <style>
@@ -66,7 +66,7 @@
 
     #instructions {
       width: 90%;
-      max-width: 600px;
+      max-width: 400px;
 
       background-color: RGBA(0, 0, 0, 0.6);
       padding: 1em;
@@ -194,6 +194,7 @@
       <a class="button" href="/edit">Edit</a>
       <button onclick="toggleFullScreen();">Fullscreen</button>
       <a class="button" href="/wall">Window</a>
+      <p>Built by <a href="https://patmurray.co" style="color: white;font-weight: bold;">Pat Murray</a></p>
     </div>
   </div>
 
