--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
       <a class="button" href="/edit">Edit</a>
       <button onclick="toggleFullScreen();">Fullscreen</button>
       <a class="button" href="/wall">Window</a>
-      <p>Built by <a href="https://patmurray.co" style="color: white;font-weight: bold;">Pat Murray</a></p>
+      <p>Built by <a href="https://patmurray.co" style="color: white;font-weight: bold;">Pat Murray</a>. <a href="https://patmurray.co/tip/">Tips are appreciated!</a></p>
     </div>
   </div>
 
