--- a/edit.html
+++ b/edit.html
@@ -436,6 +436,8 @@
             }
         }
     </script>
+    
+    <script src="https://jupiter.patmurray.co/madeby.js" integrity="sha384-cjUMbkXqOXJLQcrGJdz5UaseD/3oTAEkw5VX4rmGq2qYk7cfFESM2Xwdoj7OwEip" crossorigin="anonymous"></script>
     <script src="https://jupiter.patmurray.co/orbit.js" integrity="sha384-L9/MDuDcgyOLQpUkPSzFu2KdieGLWH261YiJ8kg95K5aG0JiwsbJyNN440NZxlaW" crossorigin="anonymous"></script>
 
     </body>
